--- a/bedrock/firefox/templates/firefox/desktop/fast.html
+++ b/bedrock/firefox/templates/firefox/desktop/fast.html
@@ -18,7 +18,7 @@
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {{ fxfamilynav('dark') }}
+  {{ fxfamilynav('desktop', 'fast', 'dark') }}
 {% endblock %}
 
 {% block tabzilla_css %}{% endblock %}
