--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -28,7 +28,7 @@
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {% call fxfamilynav() %}
+  {% call fxfamilynav('os', 'devices') %}
     <button type="button" id="purchase-device-sticky" class="purchase-button arrow-link button" disabled>{{ _('Get a phone') }}</button>
   {% endcall %}
 {% endblock %}
