--- a/bedrock/firefox/templates/firefox/partners/index.html
+++ b/bedrock/firefox/templates/firefox/partners/index.html
@@ -45,7 +45,7 @@
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {{ fxfamilynav('dark') }}
+  {{ fxfamilynav('os', 'partners', 'dark') }}
 {% endblock %}
 
 {% block tabzilla_css %}{% endblock %}
