Fix bug 1174786 - updates to leadership and steering committee pages
Removing Andreas Gal, promoting David Bryant

--- a/bedrock/foundation/templates/foundation/mocosc.html
+++ b/bedrock/foundation/templates/foundation/mocosc.html
@@ -42,9 +42,9 @@
   <ul>
     <li><a href="https://blog.mozilla.org/press/bios/mitchell-baker/">Mitchell Baker, {{ _('Executive Chairwoman') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/chris-beard/">Chris Beard, {{ _('CEO') }}</a></li>
+    <li><a href="https://blog.mozilla.org/press/bios/david-bryant/">David Bryant, {{ _('Interim CTO and VP, Platform Engineering') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/jim-cook/">Jim Cook, {{ _('Chief Finance Officer') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/denelle-dixon-thayer/">Denelle Dixon-Thayer, {{ _('Senior Vice President Business and Legal Affairs') }}</a></li>
-    <li><a href="https://blog.mozilla.org/press/bios/andreas-gal/">Andreas Gal, {{ _('CTO') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/david-slater/">David Slater, {{ _('Chief of Staff and SVP of Operations') }}</a></li>
   </ul>
 {% endblock %}
