--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -60,6 +60,20 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/david-bryant/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/david-bryant.jpg') }}">
+          <span class="fn" itemprop="name">David Bryant</span>
+        </a>
+        <span class="title" itemprop="jobTitle">{{ _('Interim CTO and VP, Platform Engineering') }}</span>
+        <span class="note">{{ _('Steering Committee') }}</span>
+
+        <ul class="elsewhere">
+          <li><a class="url twitter" itemprop="url" href="https://twitter.com/david_bryant">@david_bryant</a></li>
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/dbryant/">{{ _('Mozillians profile') }}</a></li>
+        </ul>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/jim-cook/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/jim-cook.jpg') }}">
           <span class="fn" itemprop="name">Jim Cook</span>
@@ -87,21 +101,6 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/andreas-gal/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/andreas-gal.jpg') }}">
-          <span class="fn" itemprop="name">Andreas Gal</span>
-        </a>
-        <span class="title" itemprop="jobTitle">{{ _('Chief Technology Officer') }}</span>
-        <span class="note">{{ _('Steering Committee') }}</span>
-
-        <ul class="elsewhere">
-          <li><a class="url twitter" itemprop="url" href="https://twitter.com/andreasgal">@andreasgal</a></li>
-          <li><a class="url website" itemprop="url" href="http://andreasgal.com">andreasgal.com</a></li>
-          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/gal/">{{ _('Mozillians profile') }}</a></li>
-        </ul>
-      </li>
-
-      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/david-slater/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/david-slater.jpg') }}">
           <span class="fn" itemprop="name">David Slater</span>
@@ -125,19 +124,6 @@
         <ul class="elsewhere">
           <li><a class="url twitter" itemprop="url" href="https://twitter.com/alliesuz">@alliesuz</a></li>
           <li><a class="url book" itemprop="url" href="https://mozillians.org/u/abanks">{{ _('Mozillians profile') }}</a></li>
-        </ul>
-      </li>
-
-      <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/david-bryant/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/david-bryant.jpg') }}">
-          <span class="fn" itemprop="name">David Bryant</span>
-        </a>
-        <span class="title" itemprop="jobTitle">{{ _('VP, Platform Engineering') }}</span>
-
-        <ul class="elsewhere">
-          <li><a class="url twitter" itemprop="url" href="https://twitter.com/david_bryant">@david_bryant</a></li>
-          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/dbryant/">{{ _('Mozillians profile') }}</a></li>
         </ul>
       </li>
 
