--- a/etc/cron.d/bedrock-dev.tmpl
+++ b/etc/cron.d/bedrock-dev.tmpl
@@ -12,3 +12,8 @@ MAILTO="webops-cron@mozilla.com,cron-bedrock@mozilla.com"
 */20 * * * * {{ user }} {{ source }}/bin/update-scripts/dev/update-dev-django.sh {{ log }}
 */15 * * * * {{ user }} {{ source }}/bin/update-scripts/dev/update-dev-locale.sh {{ log }}
 0    * * * * {{ user }} {{ source }}/bin/update-scripts/dev/update-dev-product-details.sh {{ log }}
+
+# bug 1167727
+# TODO remove these after testing
+*/10 * * * * {{ django_cron }} update_ical_feeds {{ log }}
+*/20 * * * * {{ django_cron }} cleanup_ical_events {{ log }}
