--- a/etc/cron.d/bedrock-stage.tmpl
+++ b/etc/cron.d/bedrock-stage.tmpl
@@ -24,7 +24,8 @@ MAILTO="webops-cron@mozilla.com,cron-bedrock@mozilla.com"
 41 * * * * {{ django_src_manage }} update_security_advisories --quiet {{ log }}
 
 # bug 1087533
-42 * * * * {{ django_cron }} update_reps_ical {{ log }}
+42 * * * * {{ django_cron }} update_ical_feeds {{ log }}
+43 0 * * * {{ django_cron }} cleanup_ical_events {{ log }}
 
 # bug 1128587
 38 * * * * {{ django_manage }} runscript update_firefox_os_feeds {{ log }}
