Fix bug 1172673 - replace home page webmaker promos
Plus new Webmaker logo

--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -153,7 +153,17 @@
             <a class="fxos-link" href="{{ url('firefox.desktop.index') }}">{{ _('Learn more') }}</a>
           </div>
         </li>
-      {% if l10n_has_tag('webmaker_promo_make') %}
+      {% if l10n_has_tag('webmaker_promo_makerparty2015') %}
+        <li id="promo-6" class="item promo-large-landscape makerparty" tabindex="0" data-name="Get creative at Maker Party">
+          <h2 class="primary go">{{ _('Get creative <br>at Maker Party') }}</h2>
+          <a class="panel-link" rel="external" href="https://teach.mozilla.org/events/">
+            <div class="secondary">
+              <h3>{{ _('Join Mozilla <br>and help teach the Web.') }}</h3>
+              <p class="more">{{ _('Join the party') }}</p>
+            </div>
+          </a>
+        </li>
+      {% elif l10n_has_tag('webmaker_promo_make') %}
         <li id="promo-6" class="item promo-large-landscape webmaker" tabindex="0" data-name="Make the Web you want">
           <h2 class="primary go">{{ _('Make the Web you want') }}</h2>
           <a class="panel-link" rel="external" href="https://webmaker.org/">
@@ -177,11 +187,19 @@
         <li id="promo-7" class="item promo-face">
           {{ promo_face(3) }}
         </li>
+      {% if l10n_has_tag('webmaker_promo_makerparty2015') %}
+        <li id="promo-8" class="item promo-small-landscape webmaker" data-name="Create. Share. Discover.">
+          <a class="panel-link" rel="external" href="https://beta.webmaker.org">
+            <h2>{{ _('Create. Share. Discover.') }}</h2>
+          </a>
+        </li>
+      {% else %}
         <li id="promo-8" class="item promo-small-landscape appmaker" data-name="Build an app in seconds">
           <a class="panel-link" rel="external" href="https://webmaker.org/appmaker">
             <h2>{{ _('Build an app <br>in seconds') }}</h2>
           </a>
         </li>
+      {% endif %}
       {% if l10n_has_tag('gear_store') %}
         <li id="promo-9" class="item promo-small-landscape gear" data-name="Get gear">
           <a class="panel-link" href="https://gear.mozilla.org/?utm_source=gear.mozilla.org&amp;utm_medium=referral&amp;utm_content=mozillaorg_smallblock">
