Bug 1172673 - update Maker Party promo
Changing the color scheme

--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -843,40 +843,16 @@ html[lang|="en"] {
 /****************************************************************************/
 // Maker Party
 .promo-large-landscape.makerparty {
-    background: #fee700; // yellow
+    background: #e14164; // pinkish red
 
     h2 {
-        color: #50504b;
         padding: 110px @baseLine 0 @baseLine;
         margin-top: @baseLine;
         background-image: url(/media/img/home/voices/promos/makerparty/maker-party.png);
         background-position: top center;
         background-repeat: no-repeat;
-        .background-size(104px, 104px);
-
-        &.go:after {
-            color: #50504b;
-            border-color: #50504b;
-        }
+        .background-size(105px, 105px);
     }
-
-    h3 {
-        color: #50504b;
-    }
-
-    p.more {
-        color: #50504b;
-        border-color: rgba(80, 80, 75, .5);
-
-        &:hover {
-            border-color: #50504b;
-        }
-    }
-
-    .panel-link:focus p.more {
-        border-color: #50504b;
-    }
-
 }
 
 html[lang|="en"] {
@@ -912,7 +888,7 @@ html[lang|="en"] {
 }
 
 .promo-small-landscape.webmaker {
-    background: #e14164; // pinkish red
+    background: #0ad; // bright blue
 
     h2 {
         padding: 35px 0 35px 130px;
