--- a/media/css/libs/normalize.less
+++ b/media/css/libs/normalize.less
@@ -1,5 +1,7 @@
 /*! normalize.css v1.1.0 | MIT License | git.io/normalize */
 
+@import '../sandstone/lib.less';
+
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
